--- a/metadata.yaml
+++ b/metadata.yaml
@@ -51,6 +51,7 @@ subjects:
 - !lcsh 'Folklore -- Arab countries'
 - !lcc 'PZ'
 - !lcsh 'Fairy tales'
+- GITenberg
 tableOfContents: "The Talking Bird, the Singing Tree, and the Golden Water\r\nThe\
   \ Story of the Fisherman and the Genie\r\nThe History of the Young King of the Black\
   \ Isles\r\nThe Story of Gulnare of the Sea\r\nThe Story of Aladdin; or, the Wonderful\
